--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Id manufacturer:</strong>
-  <%= @asset.id_manufacturer %>
+  <strong>Manufacturer:</strong>
+  <%= @asset.manufacturer_id %>
 </p>
 
 <p>
@@ -21,8 +21,8 @@
 </p>
 
 <p>
-  <strong>Id asset type:</strong>
-  <%= @asset.id_asset_type %>
+  <strong>Asset type:</strong>
+  <%= @asset.asset_type_id %>
 </p>
 
 <p>
@@ -36,13 +36,8 @@
 </p>
 
 <p>
-  <strong>Id photo:</strong>
-  <%= @asset.id_photo %>
-</p>
-
-<p>
-  <strong>Id purchase order:</strong>
-  <%= @asset.id_purchase_order %>
+  <strong>Purchase order:</strong>
+  <%= @asset.purchase_order_id %>
 </p>
 
 <p>
@@ -51,8 +46,8 @@
 </p>
 
 <p>
-  <strong>Id building:</strong>
-  <%= @asset.id_building %>
+  <strong>Building:</strong>
+  <%= @asset.building_id %>
 </p>
 
 <p>
@@ -61,8 +56,8 @@
 </p>
 
 <p>
-  <strong>Id rack:</strong>
-  <%= @asset.id_rack %>
+  <strong>Rack:</strong>
+  <%= @asset.rack_id %>
 </p>
 
 <p>
@@ -71,8 +66,8 @@
 </p>
 
 <p>
-  <strong>Id contact:</strong>
-  <%= @asset.id_contact %>
+  <strong>Primary contact:</strong>
+  <%= @asset.primary_contact_id %>
 </p>
 
 <p>
@@ -81,8 +76,8 @@
 </p>
 
 <p>
-  <strong>Id warranty provider:</strong>
-  <%= @asset.id_warranty_provider %>
+  <strong>Warranty provider:</strong>
+  <%= @asset.warranty_provider_id %>
 </p>
 
 <p>
