--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :serial_number %>
   </div>
   <div class="field">
-    <%= f.label :id_manufacturer %><br>
-    <%= f.number_field :id_manufacturer %>
+    <%= f.label :manufacturer_id %><br>
+    <%= f.number_field :manufacturer_id %>
   </div>
   <div class="field">
     <%= f.label :inventory_number %><br>
@@ -28,8 +28,8 @@
     <%= f.text_field :model %>
   </div>
   <div class="field">
-    <%= f.label :id_asset_type %><br>
-    <%= f.number_field :id_asset_type %>
+    <%= f.label :asset_type_id %><br>
+    <%= f.number_field :asset_type_id %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
@@ -40,44 +40,40 @@
     <%= f.text_area :notes %>
   </div>
   <div class="field">
-    <%= f.label :id_photo %><br>
-    <%= f.number_field :id_photo %>
-  </div>
-  <div class="field">
-    <%= f.label :id_purchase_order %><br>
-    <%= f.number_field :id_purchase_order %>
+    <%= f.label :purchase_order_id %><br>
+    <%= f.number_field :purchase_order_id %>
   </div>
   <div class="field">
     <%= f.label :surplused_on %><br>
     <%= f.date_select :surplused_on %>
   </div>
   <div class="field">
-    <%= f.label :id_building %><br>
-    <%= f.number_field :id_building %>
+    <%= f.label :building_id %><br>
+    <%= f.number_field :building_id %>
   </div>
   <div class="field">
     <%= f.label :room %><br>
     <%= f.text_field :room %>
   </div>
   <div class="field">
-    <%= f.label :id_rack %><br>
-    <%= f.number_field :id_rack %>
+    <%= f.label :rack_id %><br>
+    <%= f.number_field :rack_id %>
   </div>
   <div class="field">
     <%= f.label :in_rack_unit %><br>
     <%= f.number_field :in_rack_unit %>
   </div>
   <div class="field">
-    <%= f.label :id_contact %><br>
-    <%= f.number_field :id_contact %>
+    <%= f.label :primary_contact_id %><br>
+    <%= f.number_field :primary_contact_id %>
   </div>
   <div class="field">
     <%= f.label :warranty_expiration %><br>
     <%= f.date_select :warranty_expiration %>
   </div>
   <div class="field">
-    <%= f.label :id_warranty_provider %><br>
-    <%= f.number_field :id_warranty_provider %>
+    <%= f.label :warranty_provider_id %><br>
+    <%= f.number_field :warranty_provider_id %>
   </div>
   <div class="field">
     <%= f.label :planned_eol %><br>
