--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,57 +1,60 @@
-<h1>Listing assets</h1>
+<div class="page-header">
+  <h1>Listing assets</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Serial number</th>
-      <th>Manufacturer</th>
-      <th>Inventory number</th>
-      <th>Model</th>
-      <th>Asset type</th>
-      <th>Description</th>
-      <th>Notes</th>
-      <th>Purchase order</th>
-      <th>Surplused on</th>
-      <th>Building</th>
-      <th>Room</th>
-      <th>Rack</th>
-      <th>In rack unit</th>
-      <th>Primary contact</th>
-      <th>Warranty expiration</th>
-      <th>Warranty provider</th>
-      <th>Planned eol</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @assets.each do |asset| %>
+<div class="row">
+  <table class="table-bordered">
+    <thead>
       <tr>
-        <td><%= asset.serial_number %></td>
-        <td><%= asset.manufacturer_id %></td>
-        <td><%= asset.inventory_number %></td>
-        <td><%= asset.model %></td>
-        <td><%= asset.asset_type_id %></td>
-        <td><%= asset.description %></td>
-        <td><%= asset.notes %></td>
-        <td><%= asset.purchase_order_id %></td>
-        <td><%= asset.surplused_on %></td>
-        <td><%= asset.building_id %></td>
-        <td><%= asset.room %></td>
-        <td><%= asset.rack_id %></td>
-        <td><%= asset.in_rack_unit %></td>
-        <td><%= asset.primary_contact_id %></td>
-        <td><%= asset.warranty_expiration %></td>
-        <td><%= asset.warranty_provider_id %></td>
-        <td><%= asset.planned_eol %></td>
-        <td><%= link_to 'Show', asset %></td>
-        <td><%= link_to 'Edit', edit_asset_path(asset) %></td>
-        <td><%= link_to 'Destroy', asset, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Serial number</th>
+        <th>Manufacturer</th>
+        <th>Inventory number</th>
+        <th>Model</th>
+        <th>Asset type</th>
+        <th>Description</th>
+        <th>Notes</th>
+        <th>Purchase order</th>
+        <th>Surplused on</th>
+        <th>Building</th>
+        <th>Room</th>
+        <th>Rack</th>
+        <th>In rack unit</th>
+        <th>Primary contact</th>
+        <th>Warranty expiration</th>
+        <th>Warranty provider</th>
+        <th>Planned eol</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
+    </thead>
+  
+    <tbody>
+      <% @assets.each do |asset| %>
+        <tr>
+          <td><%= asset.serial_number %></td>
+          <td><%= asset.manufacturer_id %></td>
+          <td><%= asset.inventory_number %></td>
+          <td><%= asset.model %></td>
+          <td><%= asset.asset_type_id %></td>
+          <td><%= asset.description %></td>
+          <td><%= asset.notes %></td>
+          <td><%= asset.purchase_order_id %></td>
+          <td><%= asset.surplused_on %></td>
+          <td><%= asset.building_id %></td>
+          <td><%= asset.room %></td>
+          <td><%= asset.rack_id %></td>
+          <td><%= asset.in_rack_unit %></td>
+          <td><%= asset.primary_contact_id %></td>
+          <td><%= asset.warranty_expiration %></td>
+          <td><%= asset.warranty_provider_id %></td>
+          <td><%= asset.planned_eol %></td>
+          <td><%= link_to 'Show', asset %></td>
+          <td><%= link_to 'Edit', edit_asset_path(asset) %></td>
+          <td><%= link_to 'Destroy', asset, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
 
-<%= link_to 'New Asset', new_asset_path %>
+<%= link_to 'New Asset', new_asset_path, class: "btn btn-default", role: "button" %>
