--- a/app/views/assets/new.html.erb
+++ b/app/views/assets/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New asset</h1>
+<div class="page-header">
+  <h1>New asset</h1>
+</div>
 
-<%= render 'form' %>
+<div class="row">
+  <%= render 'form' %>
+</div>
 
-<%= link_to 'Back', assets_path %>
+<%= link_to 'Back', assets_path, class: "btn btn-default", role: "button" %>
